--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,6 +23,11 @@ repos:
         args:
           - --license-filepath
           - license_header/mpl2_header.txt
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.1.0 # Use the ref you want to point at
+    hooks:
+      - id: trailing-whitespace
+      - id: debug-statements
   - repo: https://github.com/psf/black
     rev: 21.12b0
     hooks:
