--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,6 +28,7 @@ repos:
     hooks:
       - id: trailing-whitespace
       - id: debug-statements
+      - id: check-yaml
   - repo: https://github.com/psf/black
     rev: 21.12b0
     hooks:
