Log to Sentry if unexpected URLs are found
This is rather than throwing an exception because that stops the GH Action from
copying the files to the artefacts store :facepalm:

--- a/.github/workflows/scheduled-check.yaml
+++ b/.github/workflows/scheduled-check.yaml
@@ -4,6 +4,10 @@ on:
   # TEMPORARILY DISABLED
   # schedule:
   #   - cron: "15 * * * *"
+
+env:
+  # TODO: flip this to the production DSN once we're done testing
+  SENTRY_DSN: https://c7764face5354517befaee2e56b63cfb@sentry.prod.mozaws.net/122
 jobs:
   run_on_cdn:
     runs-on: ubuntu-latest
